guardar un registro del historial
