# api/swagger/swagger.yaml
@@ -43,7 +43,7 @@ paths:
           in: body
           required: true
           schema:
-              $ref: '#/definitions/paciente'
+              $ref: '#/definitions/Paciente'
       responses:
         '201':
           description: devuelve las cuentas
@@ -63,34 +63,26 @@ paths:
         '200':
           description:
             Devuelve paciente
-
-  /server/time:
-    get:
+  /pacientes/{id}/historial:
+    post:
       tags:
-        - hours
-      summary: the local server time
-      x-swagger-router-controller: server.time
-      responses:
-        '200':
-          description: the local server time answer
-
-  /about:
-    get:
-      tags:
-        - about
-      summary: About this API
-      x-swagger-router-controller: about.about
+        - Pacientes
+      summary: Inserta datos del historial del paciente
+      x-swagger-router-controller: paciente.historial.insert
       parameters:
-        - name: name
-          in: query
-          required: false
+        - name: id
+          in: path
           type: string
-      responses:
-        '200':
-          description: About
+          description: id del paciente
+          required: true
+        - name: datos
+          in: body
+          required: true
           schema:
-            $ref: '#/definitions/about'
-
+              $ref: '#/definitions/Historial'
+      responses:
+        '201':
+          description: devuelve las cuentas
 
 definitions:
   about:
@@ -100,7 +92,7 @@ definitions:
         type: string
       name:
         type: string
-  paciente:
+  Paciente:
     type: object
     properties:
       dni:
@@ -114,4 +106,11 @@ definitions:
       telefono:
         type: number
       mail:
+        type: string
+  Historial:
+    type: object
+    properties:
+      descripcion:
+        type: string
+      observacion:
         type: string
